<resources>
    <string name="empty_string"></string>
    <string name="app_name">OpenSRP</string>
    <string name="userNameEditText">Enter Username</string>
    <string name="passwordEditText">Enter Password</string>
    <string name="login_text">Log In</string>
    <string name="logout_text">Logout</string>
    <string name="image_description">Logo</string>
    <string name="spacer">Spacer</string>
    <string name="loggin_in_dialog_title">Logging in…</string>
    <string name="loggin_in_dialog_message">Please Wait</string>
    <string name="login_failed_dialog_title">Log In Failed</string>
    <string name="login_failed_dialog_message">Please Check The Credentials</string>
    <string name="form_back_confirm_dialog_message">Are you sure you want to go back? All the data you have entered in this form will be cleared.</string>
    <string name="form_back_confirm_dialog_title">Confirm Form Close</string>
    <string name="yes_button_label">Yes</string>
    <string name="no_button_label">No</string>
    <string name="home_ec_label">Eligible Couple</string>
    <string name="home_fp_label">FP</string>
    <string name="home_anc_label">ANC</string>
    <string name="home_pnc_label">PNC</string>
    <string name="home_child_label">Child</string>
    <string name="home_report_label">Reporting</string>
    <string name="register_label">Register</string>
    <string name="home_videos_label">Videos</string>
    <string name="videos_cannot_play_video_dialog_title">Cannot Play Video</string>
    <string name="videos_IEC_not_installed_dialog_message">Please install the IEC application to play the videos.</string>
    <string name="videos_unknown_error_dialog_message">Unable to play the video due to a technical error.</string>
    <string name="settings_logout_confirm_title">Confirm Logout</string>
    <string name="settings_logout_confirm_dialog_message">Are you sure you want to log out? All the data will be cleared.</string>
    <string name="unsynced_forms_count_message">Forms Unsynced</string>
    <string name="str_next">Next &gt;&gt;</string>
    <string name="str_previous">&lt;&lt; Previous</string>
    <string name="str_page_info">Page {0} of {1}</string>
    <string name="header_name">NAME</string>
    <string name="header_ec_no">EC NO.</string>
    <string name="header_gplsa">GPLSA</string>
    <string name="header_fp">FP METHOD</string>
    <string name="header_children">CHILDREN</string>
    <string name="header_status">STATUS</string>
    <string name="header_edit"></string>
    <string name="couple_selection">All Eligible Couples</string>
    <string name="str_ec_search_hint">Search</string>
    <string name="str_fp_search_hint">Search FP Register</string>
    <string name="str_pnc_search_hint">Search PNC Register</string>
    <string name="str_child_search_hint">Search Child Register</string>
    <string name="label_sorted_by">Sorted By:</string>
    <string name="label_village">, Village:</string>
    <string name="ec_register_wife_age">({0})</string>
    <string name="ec_register_male_child">Male\n{0}</string>
    <string name="ec_register_female_child">Female\n{0}</string>
    <string name="ec_register_no_fp">No FP</string>
    <string name="status_delivery">Delivery:</string>
    <string name="str_lmp">LMP:</string>
    <string name="str_edd">EDD:</string>
    <string name="str_anc">ANC</string>
    <string name="str_pnc">PNC</string>
    <string name="str_fp">FP</string>
    <string name="str_number_of_strips">No. Strips:</string>
    <string name="str_number_given">No. Given:</string>
    <string name="str_gravida">G</string>
    <string name="str_parity">P</string>
    <string name="str_number_of_living_children">L</string>
    <string name="str_number_of_still_births">S</string>
    <string name="str_number_of_abortions">A</string>
    <string name="str_out_of_area">(O/A)</string>
    <string name="sort_by_name_label">Name (A to Z)</string>
    <string name="sort_by_name_label_reverse">Name (Z to A)</string>
    <string name="sort_by_ec_number_label">EC Number</string>
    <string name="sort_by_date_of_delivery_label">Date of Delivery</string>
    <string name="sort_by_sc_label">SC</string>
    <string name="sort_by_st_label">ST</string>
    <string name="sort_by_high_priority_label">High Priority (HP)</string>
    <string name="sort_by_high_risk_pregnancy_label">HRP</string>
    <string name="sort_by_high_risk_label">High Risk (HR)</string>
    <string name="sort_by_bpl_label">BPL</string>
    <string name="filter_by_all_label">All</string>
    <string name="filter_by_out_of_area_label">O/A</string>
    <string name="filter_by_leave_the_place_label">L/P</string>
    <string name="ec_register_title_in_short">EC</string>
    <string name="str_register_anc_form">Register ANC</string>
    <string name="str_register_fp_form">Register FP</string>
    <string name="str_register_child_form">Register Child</string>
    <string name="str_fp_change_form">FP Change</string>
    <string name="str_fp_change_fp_form">Change FP</string>
    <string name="str_record_ecp_form">Record ECP</string>
    <string name="str_edit_ec_form">Edit EC</string>
    <string name="str_close_ec_form">Close EC</string>
    <string name="report_month_sample_text">26/03 - 25/04</string>
    <string name="str_switch_language">Switch Language</string>
    <string name="str_register_anc_visit_form">ANC Visit</string>
    <string name="str_register_hb_test_form">Hb Test</string>
    <string name="str_register_ifa_form">IFA</string>
    <string name="str_register_tt_form">TT</string>
    <string name="str_register_delivery_plan_form">Delivery Plan</string>
    <string name="str_register_pnc_registration_form">PNC Registration</string>
    <string name="str_register_anc_investigations_form">ANC Investigations</string>
    <string name="str_register_anc_close_form">ANC Close</string>
    <string name="str_reporting">Reporting</string>
    <string name="str_videos">Videos</string>
    <string name="child_register_title_in_short">Child:</string>
    <string name="child_service_mode_overview">Overview</string>
    <string name="child_service_mode_immunization_0_to_9">Immunization 0-9</string>
    <string name="child_service_mode_immunization_9_plus">Immunization 9+</string>
    <string name="header_id_no">ID NO</string>
    <string name="header_dob">DOB</string>
    <string name="header_sick_status">SICK STATUS</string>
    <string name="header_last_service">LAST SERVICE</string>
    <string name="header_bcg">BCG</string>
    <string name="header_hep_b_birth">HEP B BIRTH</string>
    <string name="header_opv">OPV</string>
    <string name="header_pentavalent">PENTAVALENT</string>
    <string name="header_measles">MEASLES</string>
    <string name="header_opv_booster">OPV BOOSTER</string>
    <string name="header_dpt_booster">DPT BOOSTER</string>
    <string name="header_vitamin_a">VITAMIN A</string>
    <string name="thayi_label">Thayi:</string>
    <string name="mother_ec_label">Mother EC:</string>
    <string name="sort_by_child_age">Age</string>
    <string name="sort_by_child_hr">HR</string>
    <string name="str_child_immunizations">Child Immunizations</string>
    <string name="str_child_illness">Child Illness</string>
    <string name="str_child_close">Child Close</string>
    <string name="str_vitamin_a">Vitamin A</string>
    <string name="service_type_pnc">PNC</string>
    <string name="service_type_pentavalent_2">Pentavalent 2</string>
    <string name="service_type_bcg">BCG</string>
    <string name="service_type_pentavalent_3">Pentavalent 3</string>
    <string name="service_type_pentavalent_1">Pentavalent 1</string>
    <string name="service_type_opv_0">OPV 0</string>
    <string name="service_type_opv_1">OPV 1</string>
    <string name="service_type_opv_2">OPV 2</string>
    <string name="service_type_opv_3">OPV 3</string>
    <string name="service_type_dpt_booster_1">DPT Boost. 1</string>
    <string name="service_type_dpt_booster_2">DPT Boost. 2</string>
    <string name="service_type_opv_booster">OPV Boost</string>
    <string name="service_type_measles">Measles</string>
    <string name="service_type_measles_booster">Measles Booster</string>
    <string name="service_type_measles_booster_short">Measles B</string>
    <string name="service_type_hepb_0">Hep B</string>
    <string name="service_type_je">JE</string>
    <string name="service_type_mmr">MMR</string>
    <string name="service_type_vitamin_a">Vitamin A</string>
    <string name="service_type_illness_visit">Illness Visit</string>
    <string name="service_type_empty" />
    <string name="sick_visit">Sick Visit</string>
    <string name="illness_report"><b>Illness Report:</b> %s</string>
    <string name="illness_date">Date:</string>
    <string name="str_bcg">BCG</string>
    <string name="str_bcg_on">On</string>
    <string name="hep_b_birth">Hep B</string>
    <string name="opv">OPV</string>
    <string name="tt">TT</string>
    <string name="ifa">IFA</string>
    <string name="pentavalent">Pentavalent</string>
    <string name="measles">Measles</string>
    <string name="opv_booster">OPV Booster</string>
    <string name="dpt_booster">DPT Booster</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="service_type_pentavalent_1_short">Pentav 1</string>
    <string name="service_type_pentavalent_2_short">Pentav 2</string>
    <string name="service_type_pentavalent_3_short">Pentav 3</string>
    <string name="service_type_dpt_booster_1_short">DPT B1</string>
    <string name="service_type_dpt_booster_2_short">DPT B2</string>
    <string name="pentavalent_short">Pentav</string>
    <string name="fp_register_title_in_short">FP:</string>
    <string name="pnc_register_title_in_short">PNC:</string>
    <string name="header_method">METHOD</string>
    <string name="header_side_effects">SIDE EFFECTS</string>
    <string name="header_followup_refill">FOLLOW UP/REFILL</string>
    <string name="header_fp_prioritization_risks">RISKS</string>
    <string name="fp_register_service_mode_all_methods">All Methods</string>
    <string name="fp_register_service_mode_condom">Condom</string>
    <string name="fp_register_service_mode_dmpa">DMPA/Injectable</string>
    <string name="fp_register_service_mode_iucd">IUCD</string>
    <string name="fp_register_service_mode_ocp">OCP</string>
    <string name="fp_register_service_mode_female_sterilization">Female Sterilization</string>
    <string name="fp_register_service_mode_male_sterilization">Male Sterilization</string>
    <string name="fp_register_service_mode_others">Others</string>
    <string name="fp_register_service_mode_ecp">ECP</string>
    <string name="fp_register_service_mode_traditional">Traditional Methods</string>
    <string name="fp_register_service_mode_lam">LAM</string>
    <string name="fp_register_service_mode_centchroman">Centchroman</string>
    <string name="fp_register_service_mode_none_ps">None - PS</string>
    <string name="fp_register_service_mode_none_ss">None - SS</string>
    <string name="fp_prioritization_all_ec_service_mode">All EC</string>
    <string name="fp_prioritization_high_priority_service_mode">High Priority (HP)</string>
    <string name="fp_prioritization_two_plus_children_service_mode">2+ Children</string>
    <string name="fp_prioritization_one_child_service_mode">1 Child</string>
    <string name="fp_register_child_details">Child:</string>
    <string name="str_due">"Due "</string>
    <string name="fp_methods">FP Methods</string>
    <string name="fp_prioritization">FP Prioritization</string>
    <string name="edd_label">"EDD: "</string>
    <string name="str_days_past_due">day(s) past due</string>
    <string name="lmp_label">LMP:</string>
    <string name="str_weeks">Weeks</string>
    <string name="clients_menu">Clients</string>
    <string name="search_menu">Search</string>
    <string name="register_menu">Register</string>
    <string name="library_menu">Library</string>
</resources>