<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:contentDescription="@string/image_description"
        android:src="@drawable/login_logo" />

    <EditText
        android:id="@+id/login_userNameText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:width="260dp"
        android:background="@drawable/rounded_corner_edittext"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/userNameEditText"
        android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="#666666"
        android:textColorHint="#bfbfbf"
        android:textCursorDrawable="@null"
        android:typeface="sans" />

    <EditText
        android:id="@+id/login_passwordText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:width="260dp"
        android:background="@drawable/rounded_corner_edittext"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="#666666"
        android:textColorHint="#666666"
        android:textCursorDrawable="@null"
        android:typeface="sans" />

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:width="260dp"
        android:background="@drawable/login_button"
        android:ems="10"
        android:shadowColor="#ffffff"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="0.5"
        android:text="@string/login_text"
        android:textColor="#666666"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/login_spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/spacer" />

    <TextView
        android:id="@+id/login_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:textColor="#90c4dc"
        android:textSize="16sp"
        android:typeface="sans" />
</LinearLayout>