<?xml version="1.0" encoding="utf-8"?>

<org.smartregister.view.customcontrols.ClientGplsaChildView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gplsa_child_layout"
    android:layout_width="@dimen/fp_register_gplsa_item_width"
    android:layout_height="wrap_content"
    android:layout_weight="@integer/fp_list_gplsa_view_weight"
    android:paddingTop="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:orientation="vertical">

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/label_gravida"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
        android:text="@string/str_gravida" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/label_parity"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_gravida"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
        android:text="@string/str_parity" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/label_number_of_living_children"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_parity"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
        android:text="@string/str_number_of_living_children" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/label_number_of_still_births"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_number_of_living_children"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
        android:text="@string/str_number_of_still_births" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/label_number_of_abortions"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_number_of_still_births"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
        android:text="@string/str_number_of_abortions" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_gravida"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/label_gravida"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_parity"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txt_gravida"
        android:layout_below="@id/label_parity"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_number_of_living_children"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txt_parity"
        android:layout_below="@id/label_number_of_living_children"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_number_of_still_births"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txt_number_of_living_children"
        android:layout_below="@id/label_number_of_still_births"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_number_of_abortions"
        android:layout_width="@dimen/fp_register_gplsa_item_width"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txt_number_of_still_births"
        android:layout_below="@id/label_number_of_abortions"
        style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/label_child"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_gravida"
        android:layout_alignParentStart="true"
        style="@style/CustomFontTextViewStyle.ListView.Normal"
        android:text="@string/fp_register_child_details" />

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_child_age"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_child"
        android:layout_below="@id/txt_number_of_living_children"
        style="@style/CustomFontTextViewStyle.ListView.Normal" />

</org.smartregister.view.customcontrols.ClientGplsaChildView>
