<?xml version="1.0" encoding="utf-8"?>

<org.ei.opensrp.view.customControls.ClientGplsaView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gplsa_layout"
        android:layout_width="@dimen/list_gplsa_view_width"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/ec_list_gplsa_view_weight"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/label_gravida"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
            android:text="@string/str_gravida"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/label_parity"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_gravida"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
            android:text="@string/str_parity"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/label_number_of_living_children"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_parity"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
            android:text="@string/str_number_of_living_children"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/label_number_of_still_births"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_number_of_living_children"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
            android:text="@string/str_number_of_still_births"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/label_number_of_abortions"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_number_of_still_births"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"
            android:text="@string/str_number_of_abortions"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/txt_gravida"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/label_gravida"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/txt_parity"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_gravida"
            android:layout_below="@id/label_parity"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/txt_number_of_living_children"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_parity"
            android:layout_below="@id/label_number_of_living_children"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/txt_number_of_still_births"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_number_of_living_children"
            android:layout_below="@id/label_number_of_still_births"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"/>

    <org.ei.opensrp.view.customControls.CustomFontTextView
            android:id="@+id/txt_number_of_abortions"
            android:layout_width="@dimen/gplsa_item_width"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_number_of_still_births"
            android:layout_below="@id/label_number_of_abortions"
            style="@style/CustomFontTextViewStyle.ListView.Normal.GPLSA"/>

</org.ei.opensrp.view.customControls.ClientGplsaView>
    